# DecimalBigIntC

./: CMakeLists.txt  README.md  bigInt.c  bigInt.h  main.c  makeApp
include/: bigInt.h  bigIntAssist.h  consts.h  list.h  newBigInt.h  test.h
input/: input.txt
output/: output.txt
src/: bigInt.c  bigIntAssist.c  list.c  main.c  newBigInt.c
test/: test.c
